--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+data/BMBF.csv filter=lfs diff=lfs merge=lfs -text
+data/pub_metadatas.csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
